# deepagentsjs

./: .codespellignore  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.jsonc  .pr-description.md  CHANGELOG.md  LAUNCH10.md  README.md  UPGRADE_PLAN.md  diff.txt  eslint.config.js  eslint.config.ts  langgraph.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vitest.config.ts
.changeset/: acp-virtual-mode.md  add-wasmsh-sandbox.md  afraid-peaches-sort.md  all-swans-post.md  angry-jobs-film.md  big-eagles-melt.md  big-geckos-lie.md  big-horses-fail.md  big-sites-drive.md  bigint-quickjs-serialization-fix.md  bright-pots-leave.md  bright-spoons-sneeze.md  brown-rings-sparkle.md  bump-langsmith-0-8-0.md  bumpy-apples-drum.md  cache-control-fallback-leak.md  calm-carrots-allow.md  chilled-beers-lay.md  clean-apes-relate.md  clean-onions-reply.md  clean-pumpkins-stare.md  clear-years-end.md  codex-subagent-middleware.md  config.json  curvy-planes-sparkle.md  dark-squids-bathe.md  daytona-maperror-enoent.md  deep-experts-thank.md  dry-insects-occur.md  dry-shrimps-lead.md  dull-pans-train.md  eager-badgers-greet.md  easy-oranges-watch.md  eight-pillows-leave.md  fair-hounds-make.md  fair-pigs-punch.md  few-doors-doubt.md  few-sails-tie.md  fiery-parrots-wonder.md  fine-cows-matter.md  (+146 more)
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cli-release.yml  codeql.yml  integration-tests.yml  no-response.yml  pr_lint.yml  release.yml  unit-tests.yml
apps/agents-of-empire/: .env.example  CAMERA_CONTROLS.md  LANDING_SUMMARY.md  PRD.md  README.md  WAITLIST_SETUP.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
evals/: EVAL_SUITE_DIVERGENCE_ASSESSMENT.md  README.md  package.json  tsconfig.json  vitest.config.ts
evals/all/: README.md  eval.test.ts  index.test.ts  package.json  vitest.config.ts
evals/basic/: eval.test.ts  index.test.ts  index.ts  package.json  suite.ts
evals/external-benchmarks/: README.md  eval.test.ts  index.test.ts  index.ts  package.json  suite.ts
evals/files/: eval.test.ts  index.test.ts  index.ts  (+2 more)
examples/: package.json  research-agent.ts  streaming-advanced.ts  streaming-basic.ts  tsconfig.json
libs/harbor/python/: langsmith-env-config.yaml  pyproject.toml
libs/harbor/python/deepagents_js_harbor/: __init__.py  langsmith_environment.py  upload_to_langsmith.py  wrapper.py
libs/wasix/rust/engine/: Cargo.toml
libs/wasix/rust/engine/src/: fs.rs  lib.rs  runtime.rs
scripts/: vitest-setup-langsmith-gateway.ts
src/: agent.int.test.ts  agent.ts  config.test.ts  config.ts  graph.ts  index.ts  interrupt.ts  local_prompts.ts  local_tools.ts  model.ts  prompts.ts  state.ts  streaming.ts  subAgent.ts  tools-test.ts  tools.ts  types.ts
tests/: middleware.test.ts  utils.ts
(+1136 files in other folders)
